@@ -9,6 +9,10 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  01 Aug 2004; Masatomo Nakano <nakano@gentoo.org> pym/portage.py: Modified 
+  updating /etc/portage/package.* logic to see  CONFIG_PROTECT and 
+  CONFIG_PROTECT_MASK.
+
   01 Aug 2004; Marius Mauch <genone@gentoo.org> bin/emerge:
   Added a warning for `emerge /path/to/ebuild`
 
